# Tetris-with-SDL2

./: BackButton.cpp  BackButton.hpp  Button.cpp  Button.hpp  CMakeCache.txt  CMakeLists.txt  Credit.cpp  Credit.hpp  CreditButton.cpp  CreditButton.hpp  Game.cpp  Game.hpp  GameObject.hpp  GamePlay.cpp  GamePlay.hpp  Grid.cpp  Grid.hpp  Images.cpp  Images.hpp  InSwipeDown.cpp  InSwipeDown.hpp  MainMenu.cpp  MainMenu.hpp  Makefile  OptionButton.cpp  OptionButton.hpp  OutSwipeDown.cpp  OutSwipeDown.hpp  QuitButton.cpp  QuitButton.hpp  README.md  SFX.hpp  Sand.cpp  Sand.hpp  Scene.hpp  SceneTransition.hpp  StartButton.cpp  StartButton.hpp  TestScene.hpp  TestScene2.hpp  (+17 more)
GameCore/: Game.cpp  Scene.cpp
baitap/: ArrayAndCString.cpp  DynamicMemory.cpp  Function.cpp  Pointers.cpp  Struct.cpp  beautifull_string.cpp  lichkhambenh.cpp  readme.txt
engine/: color.cpp  color.hpp  constants.hpp  display.cpp  display.hpp  draw.cpp  draw.hpp  engine.cpp  engine.hpp  event.cpp  event.hpp  font.cpp  font.hpp  image.cpp  image.hpp  key.cpp  key.hpp  math.cpp  math.hpp  mixer.cpp  mixer.hpp  mouse.cpp  mouse.hpp  music.cpp  music.hpp  random.cpp  random.hpp  rect.cpp  rect.hpp  sprite.cpp  sprite.hpp  surface.cpp  surface.hpp  time.cpp  time.hpp  transform.cpp  transform.hpp
header/: Animation.hpp  AudioManager.hpp  BackButton.hpp  Button.hpp  Credit.hpp  CreditButton.hpp  Element.hpp  Game.hpp  GameOver.hpp  GamePlay.hpp  Grid.hpp  HTPButton.hpp  HowToPlay.hpp  Images.hpp  InSwipeDown.hpp  MainMenu.hpp  MenuButton.hpp  Option.hpp  OptionButton.hpp  OptionElement.hpp  OutSwipeDown.hpp  (+22 more)
(+142 files in other folders)
